--- a/client/index.html
+++ b/client/index.html
@@ -218,7 +218,7 @@
     
     <!-- ________________B&P__________________ -->
     <section class="section brand" id="section_brand">
-        <h2 class="block-h">Brands&Partners</h2>
+        <h2 class="block-h brand-h">Brands&Partners</h2>
         <div class="container brand-container">
             <h3 class="brand-subtitle">You work hard in building your brand, we will work hard to grow your brand and to bring it to people.</h3>
             <p class="brand-p">
